--- a/style.css
+++ b/style.css
@@ -5,5 +5,9 @@
 }
 
 body {
-  background-image: url('background.jpg'); 
+  text-align: center;
+  color: #fff;
+  background-image: url('background.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
 }
