--- a/style.css
+++ b/style.css
@@ -10,3 +10,12 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
 }
+
+.wrapper {
+  top: 35vh;
+  background-color: white;
+}
+
+.wrapper p {
+  font-size: 20px;
+}
