--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
   width: 550px;
   top: 15vh;
   left: 30vw;
-  background-color: white;
+  background-color: rgba(255,255,255,.5);
 }
 
 .wrapper p {
