--- a/style.css
+++ b/style.css
@@ -13,10 +13,9 @@ body {
 
 .wrapper {
   padding: 10px;
-  position: fixed;
   width: 600px;
-  top: 5vh;
-  left: 32.5vw;
+  margin-top: 25px;
+  margin-left: 50%;
   background-color: rgba(255,255,255,.5);
 }
 
