--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
   padding: 10px;
   width: 600px;
   margin-top: 25px;
-  margin-left: 50%;
+  margin-left: 400px;
   background-color: rgba(255,255,255,.5);
 }
 
