--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@
 }
 
 body {
+  width: 90%;
+  padding: 15px;
   text-align: center;
   background-image: url('background.jpg');
   background-size: cover;
