--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@
 }
 
 body {
-  width: 90%;
   padding: 15px;
   text-align: center;
   background-image: url('background.jpg');
@@ -14,6 +13,7 @@ body {
 }
 
 .wrapper {
+  height: 80vh;
   padding: 10px;
   background-color: rgba(255,255,255,.5);
 }
