--- a/style.css
+++ b/style.css
@@ -26,3 +26,13 @@ body {
 .wrapper p {
   font-size: 25px;
 }
+
+@media screen and (max-width: 750px) {
+  .wrapper h1 {
+    font-size: 72px;
+  }
+  
+  .wrapper p {
+    font-size: 40px; 
+  }
+}
